@@ -21,3 +21,4 @@
 2024-FEB-23: add lua-sec package for lua ssl https
 2024-FEB-24: add support for friend-specific MQTT ACLs
 2024-FEB-24: add support for mostly removing friend/device (ot-userdel)
+2024-FEB-25: add support for user-specific waypoints (#27)
